# cbits

./: .clang-format  .clang-tidy  .clang-tidy-aggressive  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  build.sh
.github/: copilot-instructions.md
bit_ops/: CMakeLists.txt  README.md
bit_ops/cmake/: bit_ops-config.cmake.in  test_signed_shifts.c  test_twos_complement.c
bit_ops/include/: bit16_ops.h  bit32_ops.h  bit64_ops.h  bit8_ops.h  bit_ops.h  bit_ops_api.h
bit_ops/src/: bit16_ops.c  bit32_ops.c  bit64_ops.c  bit8_ops.c  bit_ops.c
bit_ops/test/: CMakeLists.txt
bit_ops/test/gtest/: bit16_gtest.cpp  bit32_gtest.cpp  bit64_gtest.cpp  bit8_gtest.cpp  bit_macros_gtest.cpp  gtest_main.cpp
bit_ops/test/interactive/: bit16_cmds.c  bit32_cmds.c  bit64_cmds.c  bit8_cmds.c  bit_interactive.h  bit_ops_cmds.c  main.c
compiler_test/: support_int64.c  support_uint64.c
scripts/: check_coverage.sh
